foi adicionado botao de edição um lembrete no qual será trabalhado

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <progress id="progress-bar" max="100" value="0"></progress>
         <p id="mensagem-progresso"></p>
     </div>
+  <div class="chat-lembretes" id="chat-lembretes">
+    <div class="mensagem-bot">
+        <p>Olá! Aqui estão alguns lembretes sobre suas metas e hábitos:</p>
+    </div>
+</div>
 
 </body>
 </html>
